# Server_QT

./: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  Constants.cpp  Constants.h  EncodePassword.cpp  EncodePassword.h  FileManager.h  IJsonCodable.h  Message.cpp  Message.h  README.md  TCPServer.cpp  TCPServer.h  User.cpp  User.h  administrationdb.cpp  administrationdb.h  administrationdb.ui  dbconfiguratation.cpp  dbconfiguratation.h  dbconfiguratation.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagewidget.cpp  messagewidget.h  messagewidget.ui  mysqldatabase.cpp  mysqldatabase.h  userwidget.cpp  userwidget.h  userwidget.ui
translations/: my_ru.qm  my_ru.ts
